feat: adiciona validacoes e tratamento de erros
Centralizei as respostas de erro para evitar detalhes internos e tornar as falhas claras para quem consome a API.